dev: Api doc for CheckoutController.
